--- a/src/components/main.html
+++ b/src/components/main.html
@@ -12,6 +12,7 @@
   
       <div class="mt-6 p-2 flex flex-col items-center">
         <a class="px-4 py-2 rounded-xl border-[3px] border-black bg-naranja shadow-[3px_3px_0_#000] text-textonav font-bold transition-all duration-300 hover:translate-x-[1.5px] hover:translate-y-[1.5px] hover:shadow-[1.5px_1.5px_0_#000] hover:bg-background hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
+          <i class="fab fa-whatsapp text-2xl mr-0.5 text-center"></i>
             SOLICITÁ TU CONSULTA GRATUITA
           </a>
           
@@ -21,7 +22,7 @@
   
     <div class="flex flex-col lg:flex-row justify-evenly items-center w-full gap-6 mt-10 text-center">
       <p class="max-w-[90%] lg:max-w-[20%] text-texto text-lg lg:text-xl font-medium">
-        Somos el estudio de abogados más grande cuando hablamos de
+        Somos los mas eficaces cuando hablamos de
       </p>
     <!-- Ícono solo para desktop -->
     <div class="hidden lg:block">
