--- a/src/components/servicios.html
+++ b/src/components/servicios.html
@@ -1,4 +1,4 @@
-<section class="w-full border-t border-texto py-4 px-6 mb-20">
+<section class="w-full h-dvh border-t border-texto py-4 px-6 mb-20">
     <!-- Título -->
     <div class="flex flex-col justify-center items-center gap-4 px-5 py-6">
       <h2 class="text-texto font-bold text-2xl sm:text-3xl md:text-4xl lg:text-5xl pt-5 tracking-wider">
@@ -13,9 +13,8 @@
         
         <!-- Tarjeta 1 -->
         <div class="w-[300px] h-[250px] rounded-xl -translate-x-[6px] -translate-y-[6px] bg-naranja border-[3px] border-black shadow-[12px_12px_0_#000] overflow-hidden transition-all duration-300 hover:-translate-y-[6px]">
-          <div class="w-full h-8 bg-textonav text-texto font-extrabold text-ml px-3 py-1 border-b-[3px] border-black tracking-wider">ACCIDENTES DE TRANSITO</div>
-          <div class="p-3 text-ml tracking-wider uppercase font-semibold text-textonav">
-            ASISTENCIA LEGAL ANTE SINIESTROS VIALES.
+          <div class="w-full h-8 bg-textonav text-texto font-extrabold text-ml px-3 py-1 border-b-[3px] border-black tracking-wider">ACCIDENTES LABORALES</div>
+          <div class="p-3 text-ml tracking-wide uppercase font-semibold text-textonav">Asesoramiento ante accidentes in-itinere, mala atención médica de la ART o enfermedades laborales. Defendé tus derechos con respaldo legal y médico especializado.
             <button class="mt-3 px-3 py-1 border-[3px] border-black bg-naranja shadow-[3px_3px_0_#000] font-bold transition-all duration-300 hover:translate-x-[1.5px] hover:translate-y-[1.5px] hover:shadow-[1.5px_1.5px_0_#000] hover:bg-background hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none">
               Saber más
             </button>
@@ -24,9 +23,9 @@
   
         <!-- Tarjeta 2 -->
         <div class="w-[300px] h-[250px] rounded-xl -translate-x-[6px] -translate-y-[6px] bg-naranja border-[3px] border-black shadow-[12px_12px_0_#000] overflow-hidden transition-all duration-300 hover:-translate-y-[6px]">
-          <div class="w-full h-8 bg-textonav text-texto font-extrabold text-ml px-3 py-1 border-b-[3px] border-black uppercase tracking-wider">Accidentes Laboral</div>
+          <div class="w-full h-8 bg-textonav text-texto font-extrabold text-ml px-3 py-1 border-b-[3px] border-black uppercase tracking-wider">Accidentes de transito</div>
           <div class="p-3 text-ml font-semibold text-textonav uppercase tracking-wider">
-            Protección ante lesiones en el trabajo.
+            Asesoramiento legal personalizado tras un siniestro vial. Protegé tus derechos desde el primer momento. No firmes nada sin consultar con nuestro equipo.
             <button class="mt-3 px-3 py-1 border-[3px] border-black bg-naranja shadow-[3px_3px_0_#000] font-bold transition-all duration-300 hover:translate-x-[1.5px] hover:translate-y-[1.5px] hover:shadow-[1.5px_1.5px_0_#000] hover:bg-background hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none uppercase">
               Saber más
             </button>
@@ -37,7 +36,7 @@
         <div class="w-[300px] h-[250px] rounded-xl -translate-x-[6px] -translate-y-[6px] bg-naranja border-[3px] border-black shadow-[12px_12px_0_#000] overflow-hidden transition-all duration-300 hover:-translate-y-[6px]">
           <div class="w-full h-8 bg-textonav text-texto font-extrabold text-ml px-3 py-1 border-b-[3px] border-black uppercase tracking-wider">Despidos</div>
           <div class="p-3 text-ml font-semibold text-textonav uppercase tracking-wider">
-            Defensa ante despidos injustificados.
+            Asistencia legal inmediata ante despidos. Enviá los telegramas correctos desde el inicio para proteger tus derechos y lograr una indemnización justa.
             <button class="mt-3 px-3 py-1 border-[3px] border-black bg-naranja shadow-[3px_3px_0_#000] font-bold transition-all duration-300 hover:translate-x-[1.5px] hover:translate-y-[1.5px] hover:shadow-[1.5px_1.5px_0_#000] hover:bg-background  hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none uppercase">
               Saber más
             </button>
@@ -55,7 +54,7 @@
           </div>
         </div>
   
-        <!-- Tarjeta 5 -->
+        <!-- Tarjeta 5 
         <div class="w-[300px] h-[250px] rounded-xl -translate-x-[6px] -translate-y-[6px] bg-naranja border-[3px] border-black shadow-[12px_12px_0_#000] overflow-hidden transition-all duration-300 hover:-translate-y-[6px]">
           <div class="w-full h-8 bg-textonav text-texto font-extrabold text-ml px-3 py-1 border-b-[3px] border-black uppercase tracking-wider">Contratos</div>
           <div class="p-3 text-ml font-semibold text-textonav uppercase tracking-wider">
@@ -64,7 +63,7 @@
               Saber más
             </button>
           </div>
-        </div>
+        </div> -->
   
         <!-- Tarjeta 6 -->
         <div class="w-[300px] h-[250px] rounded-xl -translate-x-[6px] -translate-y-[6px] bg-naranja border-[3px] border-black shadow-[12px_12px_0_#000] overflow-hidden transition-all duration-300 hover:-translate-y-[6px]">
