--- a/src/components/sobrenos.html
+++ b/src/components/sobrenos.html
@@ -1,13 +1,10 @@
-<section class="w-full border-t border-texto py-4 px-6 mb-20">
+<section class="w-full h-dvh border-t border-texto py-4 px-6 mb-20">
     <div class="flex flex-col lg:flex-col justify-center items-center gap-4 px-5 py-6">
         <h2 class="text-texto font-bold text-2xl sm:text-3xl md:text-4xl lg:text-5xl pt-5 tracking-wider">Sobre Nosotros</h2>
         <hr class="border-t-2 border-texto w-15 sm:w-25 md:w-35 lg:w-45 mx-auto mb-4" />
-        <p class="text-texto font-light w-[100%] sm:w-[80%] md:w-[70%] lg:w-[50%] text-justify p-5">Somos un estudio jurídico con mas de 25 años de trayectoria en el ámbito legal,
-            empeñados en brindar a nuestros representados el mejor servicio por lo que contamos
-            con un equipo de profesionales altamente capacitado y con una solida experiencia en las
-            áreas de accidentes de tránsito, despidos laborales, accidentes laborales y derecho
-            penal las cuales ponemos a tu disposición a través de la consulta por cualquiera de los
-            canales de comunicación.</p>
+        <p class="text-texto font-light w-[100%] sm:w-[80%] md:w-[70%] lg:w-[50%] text-justify p-5">El estudio Dres. RODRIGUEZ tiene más de 25 años de trayectoria, empeñado en brindar a nuestros representados un servicio profesional de eficacia, contamos con un equipo de profesionales altamente capacitado, con una sólida experiencia en cada una de las siguientes áreas del derecho: ACCIDENTES DE TRÁNSITO; ACCIDENTES LABORALES; DESPIDOS; SUCESIONES Y DERECHO PENAL, las cuales ponemos a tu disposición a través de la consulta por cualquiera de los canales de comunicación.
+          Nuestros letrados se encuentran comprometido a ofrecer un servicio de calidad, basado en la ética, la confidencialidad, el respeto, y profesionalismo.
+          </p>
     </div>
     
     <div>
