Arreglos en tarjetas de servicios y cambios de tipografia y tamaños

--- a/src/components/sobrenos.html
+++ b/src/components/sobrenos.html
@@ -1,37 +1,61 @@
 <section class="w-full h-dvh border-t border-texto py-4 px-6 mb-20">
-    <div class="flex flex-col lg:flex-col justify-center items-center gap-4 px-5 py-6">
-        <h2 class="text-texto font-bold text-2xl sm:text-3xl md:text-4xl lg:text-5xl pt-5 tracking-wider">Sobre Nosotros</h2>
-        <hr class="border-t-2 border-texto w-15 sm:w-25 md:w-35 lg:w-45 mx-auto mb-4" />
-        <p class="text-texto font-light w-[100%] sm:w-[80%] md:w-[70%] lg:w-[50%] text-justify p-5">El estudio Dres. RODRIGUEZ tiene más de 25 años de trayectoria, empeñado en brindar a nuestros representados un servicio profesional de eficacia, contamos con un equipo de profesionales altamente capacitado, con una sólida experiencia en cada una de las siguientes áreas del derecho: ACCIDENTES DE TRÁNSITO; ACCIDENTES LABORALES; DESPIDOS; SUCESIONES Y DERECHO PENAL, las cuales ponemos a tu disposición a través de la consulta por cualquiera de los canales de comunicación.
-          Nuestros letrados se encuentran comprometido a ofrecer un servicio de calidad, basado en la ética, la confidencialidad, el respeto, y profesionalismo.
-          </p>
-    </div>
-    
-    <div>
-        <h2 class="sm:text-xl md:text-2xl lg:text-3xl text-xl font-bold tracking-wide mb-10 text-texto text-center mt-10">
-            Hitos que nos definen
-          </h2>
-        
-        <div class="flex flex-col md:flex-row justify-center items-center gap-10">
-            
-            <!-- Tarjeta 1 -->
-            <div class="w-[280px] h-[150px] bg-textonav text-texto border-[3px] border-black shadow-[12px_12px_0px_black] rounded-xl transition-all duration-300 p-6 flex flex-col items-center justify-center">
-                <p id="clientes" class="text-3xl font-extrabold select-none">0</p>
-                <p class="text-sm mt-1 font-medium select-none">clientes atendidos</p>
-              </div>
-        
-            <!-- Tarjeta 2 -->
-            <div class="w-[280px] h-[150px] bg-textonav text-texto border-[3px] border-black shadow-[12px_12px_0px_black] rounded-xl transition-all duration-300 p-6 flex flex-col items-center justify-center">
-                <p id="experiencias" class="text-3xl font-extrabold select-none">0</p>
-                <p class="text-sm mt-1 font-medium select-none">años de experiencia</p>
-              </div>
-        
-            <!-- Tarjeta 3 -->
-            <div class="w-[280px] h-[150px] bg-textonav text-texto border-[3px] border-black shadow-[12px_12px_0px_black] rounded-xl transition-all duration-300 p-6 flex flex-col items-center justify-center">
-                <p id="tasa" class="text-3xl font-extrabold select-none">0%</p>
-                <p class="text-sm mt-1 font-medium select-none">tasa de experiencia</p>
-              </div>
-        </div>
-    </div>
+  <div
+    class="flex flex-col lg:flex-col justify-center items-center gap-4 px-5 py-6"
+  >
+    <h2
+      class="text-texto font-bold text-2xl sm:text-3xl md:text-4xl lg:text-5xl pt-5 tracking-wider"
+    >
+      Sobre Nosotros
+    </h2>
+    <hr
+      class="border-t-2 border-texto w-15 sm:w-25 md:w-35 lg:w-45 mx-auto mb-4"
+    />
+    <p
+      class="text-texto font-light w-[100%] sm:w-[80%] md:w-[70%] lg:w-[50%] text-justify text-lg p-5"
+    >
+      El estudio Dres. RODRIGUEZ tiene más de 25 años de trayectoria, empeñado
+      en brindar a nuestros representados un servicio profesional de eficacia,
+      contamos con un equipo de profesionales altamente capacitado, con una
+      sólida experiencia en cada una de las siguientes áreas del derecho:
+      ACCIDENTES DE TRÁNSITO; ACCIDENTES LABORALES; DESPIDOS; SUCESIONES Y
+      DERECHO PENAL, las cuales ponemos a tu disposición a través de la consulta
+      por cualquiera de los canales de comunicación. Nuestros letrados se
+      encuentran comprometido a ofrecer un servicio de calidad, basado en la
+      ética, la confidencialidad, el respeto, y profesionalismo.
+    </p>
+  </div>
 
+  <div>
+    <h2
+      class="sm:text-xl md:text-2xl lg:text-3xl text-xl font-bold tracking-wide mb-10 text-texto text-center mt-10"
+    >
+      Hitos que nos definen
+    </h2>
+
+    <div class="flex flex-col md:flex-row justify-center items-center gap-10">
+      <!-- Tarjeta 1 -->
+      <div
+        class="w-[280px] h-[150px] bg-textonav text-texto border-[3px] border-black shadow-[12px_12px_0px_black] rounded-xl transition-all duration-300 p-6 flex flex-col items-center justify-center"
+      >
+        <p id="clientes" class="text-3xl font-extrabold select-none">0</p>
+        <p class="text-sm mt-1 font-medium select-none">clientes atendidos</p>
+      </div>
+
+      <!-- Tarjeta 2 -->
+      <div
+        class="w-[280px] h-[150px] bg-textonav text-texto border-[3px] border-black shadow-[12px_12px_0px_black] rounded-xl transition-all duration-300 p-6 flex flex-col items-center justify-center"
+      >
+        <p id="experiencias" class="text-3xl font-extrabold select-none">0</p>
+        <p class="text-sm mt-1 font-medium select-none">años de experiencia</p>
+      </div>
+
+      <!-- Tarjeta 3 -->
+      <div
+        class="w-[280px] h-[150px] bg-textonav text-texto border-[3px] border-black shadow-[12px_12px_0px_black] rounded-xl transition-all duration-300 p-6 flex flex-col items-center justify-center"
+      >
+        <p id="tasa" class="text-3xl font-extrabold select-none">0%</p>
+        <p class="text-sm mt-1 font-medium select-none">tasa de experiencia</p>
+      </div>
+    </div>
+  </div>
 </section>
