--- a/src/style.css
+++ b/src/style.css
@@ -34,12 +34,12 @@
     min-height: 100vh;
   }
 
-  h1 {
-    font-size: 3.2em;
-    line-height: 1.1;
+  h1, h2, h3, h4, h5 {
+    @apply font-title;
   }
 
   a {
+    @apply font-title;
     font-weight: 500;
     color: #646cff;
     text-decoration: inherit;
@@ -50,6 +50,7 @@
   }
 
   button {
+    @apply font-title;
     border-radius: 8px;
     border: 1px solid transparent;
     padding: 0.6em 1.2em;
