cambios de lugar archivos para que funcionen

--- a/public/components/header.html
+++ b/public/components/header.html
@@ -1,6 +1,6 @@
 <header class="bg-texto px-6 md:px-20 py-4 flex items-center justify-between shadow-md h-18 relative" x-data="{ open: false }">
   <!-- Logo -->
-  <a href="#header-container" class="text-2xl text-textonav font-bold"><img class="w-14 h-14 cursor-pointer" src="/images/PNG-LOGO-BEIGE.png" alt="Logo Beige"></a>
+  <a href="#header-container" class="text-2xl text-textonav font-bold"><img class="w-14 h-14 cursor-pointer" src="/public/PNG-LOGO-BEIGE.png" alt="Logo Beige"></a>
 
   <!-- Botón menú hamburguesa (visible solo en mobile) -->
   <button @click="open = !open" class="md:hidden text-textonav focus:outline-none">
