cambios de lugar archivos para que funcionen

--- a/public/components/main.html
+++ b/public/components/main.html
@@ -1,7 +1,7 @@
 <main class="min-h-screen flex flex-col justify-around items-center px-4 py-8">
     <div class="flex flex-col items-center text-center gap-6">
       <div class="flex flex-col items-center gap-3">
-        <img class="h-20 w-20" src="/public/PNG-LOGO.png" alt="LOGO NEGRO">
+        <img class="h-20 w-20" src="/PNG-LOGO.png" alt="LOGO NEGRO">
         <h1 class="text-texto font-bold text-2xl sm:text-3xl md:text-4xl lg:text-5xl">
           Estudio Jurídico Rodriguez y Asociados
         </h1>
