Arreglos finales, seccion servicios

--- a/public/components/sobrenos.html
+++ b/public/components/sobrenos.html
@@ -1,4 +1,4 @@
-<section class="w-full h-dvh border-t border-texto py-4 px-6 mb-20">
+<section class="w-full border-t border-texto py-4 px-6 mb-20">
   <div
     class="flex flex-col lg:flex-col justify-center items-center gap-4 px-5 py-6"
   >
