--- a/public/components/servicios.html
+++ b/public/components/servicios.html
@@ -23,18 +23,14 @@
         <h3
           class="text-texto font-bold text-xl md:w-1/3 uppercase text-center md:text-left"
         >
-          Accidentes de Tránsito
+          Accidentes Laborales
         </h3>
         <div class="md:w-1/3 flex justify-center">
-          <img
-            src="/imagen-preview.png"
-            alt="Accidente"
-            class="max-h-[150px] object-contain"
-          />
+          <i class="fas fa-car-burst text-9xl text-texto text-center"></i>
         </div>
         <div class="md:w-1/3 flex justify-center md:justify-end w-full">
           <details
-            class="w-full bg-textonav text-texto p-4 rounded shadow-inner"
+            class="w-full bg-textonav text-texto p-4 rounded"
             x-data="{ open: false }"
             @toggle="open = !open"
           >
@@ -113,18 +109,100 @@
         <h3
           class="text-texto font-bold text-xl md:w-1/3 uppercase text-center md:text-left"
         >
-          Despidos
+          Accidentes de tránsito
         </h3>
         <div class="md:w-1/3 flex justify-center">
-          <img
-            src="/imagen-preview.png"
-            alt="Despidos"
-            class="max-h-[150px] object-contain"
-          />
+          <i class="fas fa-car-burst text-9xl text-texto text-center"></i>
         </div>
         <div class="md:w-1/3 flex justify-center md:justify-end w-full">
           <details
-            class="w-full bg-textonav text-texto p-4 rounded shadow-inner"
+            class="w-full bg-textonav text-texto p-4 rounded"
+            x-data="{ open: false }"
+            @toggle="open = !open"
+          >
+            <summary
+              class="cursor-pointer w-full px-4 py-2 text-center border-[3px] border-black bg-naranja text-textonav font-bold shadow-[3px_3px_0_#000] transition-all duration-300 hover:translate-x-[1.5px] hover:translate-y-[1.5px] hover:shadow-[1.5px_1.5px_0_#000] hover:bg-background hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none uppercase"
+            >
+              Saber más
+            </summary>
+            <div class="mt-4 text-sm leading-relaxed space-y-4">
+              <div
+                x-data="{ open1: false, open2: false, open3: false, open4: false }"
+                class="space-y-2"
+              >
+                <div>
+                  <button
+                    @click="open1 = !open1"
+                    class="flex justify-between items-center w-full text-left font-semibold bg-textonav text-texto text-xl"
+                  >
+                    <span>¿Qué hacer después de un accidente?</span>
+                    <span x-text="open1 ? '-' : '+'"></span>
+                  </button>
+                  <div x-show="open1" x-transition class="mt-2 text-lg">
+                    Contactanos de inmediato y reuní documentación.
+                  </div>
+                </div>
+                <div>
+                  <button
+                    @click="open2 = !open2"
+                    class="flex justify-between items-center w-full text-left font-semibold bg-textonav text-texto text-xl"
+                  >
+                    <span>¿Qué es un accidente in-itinere?</span>
+                    <span x-text="open2 ? '-' : '+'"></span>
+                  </button>
+                  <div x-show="open2" x-transition class="mt-2 text-lg">
+                    Es el que ocurre yendo al trabajo o volviendo.
+                  </div>
+                </div>
+                <div>
+                  <button
+                    @click="open3 = !open3"
+                    class="flex justify-between items-center w-full text-left font-semibold bg-textonav text-texto text-xl"
+                  >
+                    <span>¿La ART debe responder?</span>
+                    <span x-text="open3 ? '-' : '+'"></span>
+                  </button>
+                  <div x-show="open3" x-transition class="mt-2 text-lg">
+                    Sí, si está documentado correctamente.
+                  </div>
+                </div>
+                <div>
+                  <button
+                    @click="open4 = !open4"
+                    class="flex justify-between items-center w-full text-left font-semibold bg-textonav text-texto text-xl"
+                  >
+                    <span>¿Qué documentación necesito?</span>
+                    <span x-text="open4 ? '-' : '+'"></span>
+                  </button>
+                  <div x-show="open4" x-transition class="mt-2 text-lg">
+                    Certificados médicos, policiales y testigos si hay.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </details>
+        </div>
+      </div>
+    </div>
+
+    <!-- TARJETA 3 -->
+    <div
+      class="w-full rounded-xl bg-textonav border-[3px] border-black shadow-[12px_12px_0_#000] transition-all duration-300 hover:-translate-y-[6px] overflow-hidden"
+    >
+      <div
+        class="flex flex-col md:flex-row items-center justify-between gap-6 px-6 py-6"
+      >
+        <h3
+          class="text-texto font-bold text-xl md:w-1/3 uppercase text-center md:text-left"
+        >
+          Despidos
+        </h3>
+        <div class="md:w-1/3 flex justify-center">
+          <i class="fas fa-car-burst text-9xl text-texto text-center"></i>
+        </div>
+        <div class="md:w-1/3 flex justify-center md:justify-end w-full">
+          <details
+            class="w-full bg-textonav text-texto p-4 rounded"
             x-data="{ open: false }"
             @toggle="open = !open"
           >
@@ -193,7 +271,7 @@
       </div>
     </div>
 
-    <!-- TARJETA 3 -->
+    <!-- TARJETA 4 -->
     <div
       class="w-full rounded-xl bg-textonav border-[3px] border-black shadow-[12px_12px_0_#000] transition-all duration-300 hover:-translate-y-[6px] overflow-hidden"
     >
@@ -203,18 +281,14 @@
         <h3
           class="text-texto font-bold text-xl md:w-1/3 uppercase text-center md:text-left"
         >
-          Jubilaciones y Pensiones
+          Derecho Penal
         </h3>
         <div class="md:w-1/3 flex justify-center">
-          <img
-            src="/imagen-preview.png"
-            alt="Jubilaciones"
-            class="max-h-[150px] object-contain"
-          />
+          <i class="fas fa-car-burst text-9xl text-texto text-center"></i>
         </div>
         <div class="md:w-1/3 flex justify-center md:justify-end w-full">
           <details
-            class="w-full bg-textonav text-texto p-4 rounded shadow-inner"
+            class="w-full bg-textonav text-texto p-4 rounded"
             x-data="{ open: false }"
             @toggle="open = !open"
           >
@@ -284,7 +358,7 @@
       </div>
     </div>
 
-    <!-- TARJETA 4 -->
+    <!-- TARJETA 5 -->
     <div
       class="w-full rounded-xl bg-textonav border-[3px] border-black shadow-[12px_12px_0_#000] transition-all duration-300 hover:-translate-y-[6px] overflow-hidden"
     >
@@ -294,18 +368,14 @@
         <h3
           class="text-texto font-bold text-xl md:w-1/3 uppercase text-center md:text-left"
         >
-          Familia y Sucesiones
+          Sucesiones
         </h3>
         <div class="md:w-1/3 flex justify-center">
-          <img
-            src="/imagen-preview.png"
-            alt="Familia"
-            class="max-h-[150px] object-contain"
-          />
+          <i class="fas fa-car-burst text-9xl text-texto text-center"></i>
         </div>
         <div class="md:w-1/3 flex justify-center md:justify-end w-full">
           <details
-            class="w-full bg-textonav text-texto p-4 rounded shadow-inner"
+            class="w-full bg-textonav text-texto p-4 rounded"
             x-data="{ open: false }"
             @toggle="open = !open"
           >
